NXP-24952: Fix new java 11 warnings